--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="box1">
         
 
-        <a class="tele-suivant" href="https://mega.nz/folder/DxEiFDpa#hnrai-4X5nb7jDoldTGitg">aller vers <i class="fas fa-angle-double-right"></i></a>
+        <a class="tele-suivant" href="https://www.beatstars.com/kjeux5089471/feed">aller vers <i class="fas fa-angle-double-right"></i></a>
 </body>
 <script src="https://kit.fontawesome.com/8fb0f321da.js" crossorigin="anonymous"></script>
 </html>
