--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>KEZY | Téléchargement</title>
+    <title>LOW | Téléchargement</title>
 </head>
 <body>
-    <h1 class="logo">KEZY</h1>
+    <h1 class="logo">LOW</h1>
     <p>prod</p>
     <p class="user"></p>
     <div class="box1">
